# cpp_boilerplate

./: CMakeLists.txt  README.md
contrib/: conanfile.txt  make.py
contrib/qt/: conanfile.py
